tests/cases/should_fail/literals/double_comma_in_function_call.hash
// run=fail, stage=parse

l := f(a,,);
