tests/cases/should_fail/literals/double_comma_in_function_call.stderr
error: expected an expression, however received a `,`
 --> $DIR/double_comma_in_function_call.hash:1:10
1 |   l := f(a,,);
  |            ^ here
